[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/GameOver.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/kf_16_o1.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/kb_25_o2.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/kfn_14_o1.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Interface/Btn_Right.png" type="Texture" id=5]
[ext_resource path="res://Assets/Interface/Btn_Right1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/GameWon.gd" type="Script" id=7]
[ext_resource path="res://Scenes/TransitionScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://Audio/puzzle_won.ogg" type="AudioStream" id=9]
[ext_resource path="res://Audio/Button.ogg" type="AudioStream" id=10]

[node name="GameWon" type="Node2D"]
script = ExtResource( 7 )

[node name="B" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="B"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.5
margin_top = -200.0
margin_right = 312.5
margin_bottom = 200.0
rect_min_size = Vector2( 625, 400 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="B/VB"]
margin_right = 625.0
margin_bottom = 39.0
rect_min_size = Vector2( 625, 30 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Congratulations! "
align = 1
valign = 1
autowrap = true

[node name="Control2" type="Control" parent="B/VB"]
margin_top = 59.0
margin_right = 625.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 10 )

[node name="Label2" type="Label" parent="B/VB"]
margin_top = 89.0
margin_right = 625.0
margin_bottom = 132.0
rect_min_size = Vector2( 625, 30 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "You have mastered the dimensions by gathering all the valuable resources and unlocking more data"
align = 1
valign = 1
autowrap = true

[node name="Label3" type="Label" parent="B/VB"]
margin_top = 152.0
margin_right = 625.0
margin_bottom = 189.0
rect_min_size = Vector2( 625, 30 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "Your dedication, curiosity, expertise and perseverance have left an extraordinary mark on the scientific community!"
align = 1
valign = 1
autowrap = true

[node name="Control" type="Control" parent="B/VB"]
margin_top = 209.0
margin_right = 625.0
margin_bottom = 219.0
rect_min_size = Vector2( 0, 10 )

[node name="Score" type="Label" parent="B/VB"]
margin_top = 239.0
margin_right = 625.0
margin_bottom = 269.0
rect_min_size = Vector2( 625, 30 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Total score:"
align = 1
valign = 1
autowrap = true

[node name="subScore" type="Label" parent="B/VB"]
margin_top = 289.0
margin_right = 625.0
margin_bottom = 319.0
rect_min_size = Vector2( 625, 30 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="TextureButton" parent="B/VB"]
margin_left = 275.0
margin_top = 339.0
margin_right = 350.0
margin_bottom = 414.0
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="TransitionScreen" parent="." instance=ExtResource( 8 )]

[node name="won" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Btn1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="pressed" from="B/VB/close" to="." method="_on_close_pressed"]
